[tool.poetry]
name = "sanic-paiment-app"
version = "0.1.0"
description = "Sanic framework test task"
authors = ["Aleksandr Rol <rolaleksandr75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanic = "^24.6.0"
sanic-envconfig = "^1.3.4"
databases = {extras = ["postgresql"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
